[package]
name = "banana"
version = "0.1.0"
authors = ["Mohamed Shadhaan <shadhanm@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
ratatui = { version = "0.29.0", features = ["unstable-widget-ref"] }
tokio = { version = "1.40.0", features = ["full"] }
